Fixed a typo in the text

--- a/www/index.html
+++ b/www/index.html
@@ -183,12 +183,12 @@
       </ul>
     </div>
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
-      <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
+      <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">SePittsburgh was nattings</a>
       <h1>About</h1>
     </div>
     <div role="main" class="ui-content">
       <h3>About Smell PGH</h3>
-      <p>Pittsburgh was named one of top 15 the most livable cities in the US, but our air quality is often worse than other cities on that list. Foul odors outside are typically symptoms of a serious pollution problem in our region. We, our children, our friends and families all breathe in this air. If our air smells toxic, then we are likely inhaling toxins.</p>
+      <p>Pittsburgh was named one of the top 15 most livable cities in the US, but our air quality is often worse than other cities on that list. Foul odors outside are typically symptoms of a serious pollution problem in our region. We, our children, our friends and families all breathe in this air. If our air smells toxic, then we are likely inhaling toxins.</p>
       <p>Smell PGH was designed to crowdsource smell reports so we can track how pollutants travel through our air across Pittsburgh. All odor complaints submitted through the app go directly to the health department (ACHD) so they can better monitor and act on these complaints.</p>
       <center class="smell-submit-share">-- Smell -- Submit -- Share --</center>
       <p>Smell PGH was developed by the CMU CREATE Lab with support from the Heinz Endowments, and in collaboration with:</p>
