--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/location.js"></script>
     <script src="js/pages/startuppage.js"></script>
     <script src="js/pages/homepage.js"></script>
+    <script src="js/pages/mappage.js"></script>
     <script src="js/pages/settingspage.js"></script>
     <script src="js/app.js"></script>
   </head>
@@ -32,6 +33,23 @@
 
 
   <div data-role="page" id="home" class="page-fullscreened">
+    <!-- modals -->
+    <div id="modal-home-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" >
+      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+      <div data-role="header" data-theme="a">
+        <h1 class="modal-title">Submitting Smell Reports</h1>
+      </div>
+      <div role="main" class="ui-content">
+        <ul>
+          <li>Rate the odor on a scale of 1-5</li>
+          <li>Describe the smell, source of odor and any symptoms (recommended)</li>
+          <li>Write a personal note to the health department (optional)</li>
+          <li>Endorse your report to ACHD - see Settings (recommended)</li>
+        </ul>
+        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">OK</a>
+      </div>
+    </div>
+    <!-- panel -->
     <div data-role="panel" id="home-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
@@ -39,10 +57,12 @@
         <li><a href="#about">About</a></li>
       </ul>
     </div>
+    <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Smell PGH</h1>
       <a href="#home-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
     </div>
+    <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
       <div class="homepage-section-top">
         <h3>How does your air smell right now?</h3>
@@ -72,6 +92,7 @@
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
+    <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="home_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
@@ -84,6 +105,23 @@
 
 
   <div data-role="page" id="map" class="page-fullscreened">
+    <!-- modals -->
+    <div id="modal-map-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" >
+      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+      <div data-role="header" data-theme="a">
+        <h1 class="modal-title">Using The Map</h1>
+      </div>
+      <div role="main" class="ui-content">
+        <ul>
+          <li>This map shows smell reports from all across Pittsburgh</li>
+          <li>Scroll through the timeline to view reports from any day</li>
+          <li>Dates highlighted with a darker color indicate high volume of smell reports</li>
+          <li>Click on a smell report or monitoring station to view more details</li>
+        </ul>
+        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">OK</a>
+      </div>
+    </div>
+    <!-- panel -->
     <div data-role="panel" id="map-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
@@ -91,15 +129,18 @@
         <li><a href="#about">About</a></li>
       </ul>
     </div>
+    <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Smell PGH</h1>
       <a href="#map-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
     </div>
+    <!-- main -->
     <div role="main" class="ui-content" id="iframe-map-container" data-iscroll>
       <iframe id="iframe-map" src="http://localhost/visualization">
         <p>Your browser does not support iframes.</p>
       </iframe>
     </div>
+    <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="map_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
@@ -112,6 +153,7 @@
 
 
   <div data-role="page" id="settings" class="page-fullscreened">
+    <!-- panel -->
     <div data-role="panel" id="settings-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
@@ -119,10 +161,12 @@
         <li><a href="#about">About</a></li>
       </ul>
     </div>
+    <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#settings-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
       <h1>Settings</h1>
     </div>
+    <!-- main -->
     <div role="main" class="ui-content">
       <div id="reportsCollapsible" data-role="collapsible">
         <h3>Contact Information</h3>
@@ -143,6 +187,7 @@
         <input type="checkbox" id="checkbox_pghaqi_notifications" />
       </div>
     </div>
+    <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="settings_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
@@ -155,15 +200,18 @@
 
 
   <div data-role="page" id="startup" class="page-fullscreened">
+    <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Smell PGH</h1>
     </div>
+    <!-- main -->
     <div role="main" class="ui-content">
       <h3>Welcome to Smell PGH!</h3>
       <p>Thank you for installing the Smell PGH App!</p>
       <p>This app is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you're outside, please report it through this app.</p>
       <p style="font-weight:bold;">Smell PGH will automatically submit these reports to the Allegheny County Health Department (ACHD) so they can take action.</p>
     </div>
+    <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
@@ -175,6 +223,7 @@
 
 
   <div data-role="page" id="about" class="page-fullscreened">
+    <!-- panel -->
     <div data-role="panel" id="about-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
@@ -182,10 +231,12 @@
         <li><a href="#about" class="ui-btn ui-btn-active">About</a></li>
       </ul>
     </div>
+    <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">SePittsburgh was nattings</a>
       <h1>About</h1>
     </div>
+    <!-- main -->
     <div role="main" class="ui-content">
       <h3>About Smell PGH</h3>
       <p>Pittsburgh was named one of the top 15 most livable cities in the US, but our air quality is often worse than other cities on that list. Foul odors outside are typically symptoms of a serious pollution problem in our region. We, our children, our friends and families all breathe in this air. If our air smells toxic, then we are likely inhaling toxins.</p>
@@ -203,6 +254,7 @@
         version: 1.2.3
       </div>
     </div>
+    <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="settings_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
