Fixed some panel glitches/typos

--- a/www/index.html
+++ b/www/index.html
@@ -53,8 +53,8 @@
     <div data-role="panel" id="home-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
-        <li><a href="#settings">Settings</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#settings" data-transition="none">Settings</a></li>
+        <li><a href="#about" data-transition="none">About</a></li>
       </ul>
     </div>
     <!-- header -->
@@ -125,8 +125,8 @@
     <div data-role="panel" id="map-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
-        <li><a href="#settings">Settings</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#settings" data-transition="none">Settings</a></li>
+        <li><a href="#about" data-transition="none">About</a></li>
       </ul>
     </div>
     <!-- header -->
@@ -157,8 +157,8 @@
     <div data-role="panel" id="settings-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
-        <li><a href="#settings" class="ui-btn ui-btn-active">Settings</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#settings" class="ui-btn ui-btn-active" data-transition="none">Settings</a></li>
+        <li><a href="#about" data-transition="none">About</a></li>
       </ul>
     </div>
     <!-- header -->
@@ -227,13 +227,13 @@
     <div data-role="panel" id="about-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
-        <li><a href="#settings">Settings</a></li>
-        <li><a href="#about" class="ui-btn ui-btn-active">About</a></li>
+        <li><a href="#settings" data-transition="none">Settings</a></li>
+        <li><a href="#about" class="ui-btn ui-btn-active" data-transition="none">About</a></li>
       </ul>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
-      <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">SePittsburgh was nattings</a>
+      <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
       <h1>About</h1>
     </div>
     <!-- main -->
