--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/pages/homepage.js"></script>
     <script src="js/pages/mappage.js"></script>
     <script src="js/pages/settingspage.js"></script>
+    <script src="js/pages/aboutpage.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
@@ -251,7 +252,7 @@
         <li>ROCIS</li>
       </ul>
       <div id="about-version-number">
-        version: 1.2.3
+        version: ###
       </div>
     </div>
     <!-- footer -->
