Removed page-fullscreened from every page except map.

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
   <body>
 
 
-  <div data-role="page" id="home" class="page-fullscreened">
+  <div data-role="page" id="home">
     <!-- modals -->
     <div id="modal-home-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" >
       <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
@@ -153,7 +153,7 @@
   </div>
 
 
-  <div data-role="page" id="settings" class="page-fullscreened">
+  <div data-role="page" id="settings">
     <!-- panel -->
     <div data-role="panel" id="settings-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
@@ -200,7 +200,7 @@
   </div>
 
 
-  <div data-role="page" id="startup" class="page-fullscreened">
+  <div data-role="page" id="startup">
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Smell PGH</h1>
@@ -223,7 +223,7 @@
   </div>
 
 
-  <div data-role="page" id="about" class="page-fullscreened">
+  <div data-role="page" id="about">
     <!-- panel -->
     <div data-role="panel" id="about-panel" data-display="overlay">
       <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
