Fixed(?) race condition issues apparent in ios9 for jqm modals.

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
 
   <div data-role="page" id="home">
     <!-- modals -->
-    <div id="modal-home-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" >
+    <div id="modal-home-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" data-history="false">
       <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
       <div data-role="header" data-theme="a">
         <h1 class="modal-title">Submitting Smell Reports</h1>
@@ -107,7 +107,7 @@
 
   <div data-role="page" id="map" class="page-fullscreened">
     <!-- modals -->
-    <div id="modal-map-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" >
+    <div id="modal-map-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" data-history="false">
       <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
       <div data-role="header" data-theme="a">
         <h1 class="modal-title">Using The Map</h1>
