Added user hash as parameter to the /visualizations page.

--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
     </div>
     <!-- main -->
     <div role="main" class="ui-content" id="iframe-map-container" data-iscroll>
-      <iframe id="iframe-map" src="http://localhost/visualization">
+      <iframe id="iframe-map">
         <p>Your browser does not support iframes.</p>
       </iframe>
     </div>
