More text changes

--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
     </div>
     <!-- panel -->
     <div data-role="panel" id="home-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
@@ -89,7 +89,7 @@
       </div>
       <br/>
       <div class="submission-disclaimer">
-        All smell reports rated 2 or higher will be sent to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab (top right).
+        All smell reports rated 2 or higher will be sent to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab.
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
@@ -124,7 +124,7 @@
     </div>
     <!-- panel -->
     <div data-role="panel" id="map-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
@@ -156,7 +156,7 @@
   <div data-role="page" id="settings">
     <!-- panel -->
     <div data-role="panel" id="settings-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
         <li><a href="#settings" class="ui-btn ui-btn-active" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
@@ -226,7 +226,7 @@
   <div data-role="page" id="about">
     <!-- panel -->
     <div data-role="panel" id="about-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Back</a>
+      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
       <ul data-role="listview" data-inset="true" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" class="ui-btn ui-btn-active" data-transition="none">About</a></li>
@@ -250,6 +250,7 @@
         <li>GASP</li>
         <li>Sierra Club</li>
         <li>ROCIS</li>
+        <li>Blue Lens, LLC</li>
       </ul>
       <div id="about-version-number">
         version: ###
