Even more text changes.

--- a/www/index.html
+++ b/www/index.html
@@ -115,6 +115,7 @@
       <div role="main" class="ui-content">
         <ul>
           <li>This map shows smell reports from all across Pittsburgh</li>
+          <li>We offset smell report locations to protect your privacy</li>
           <li>Scroll through the timeline to view reports from any day</li>
           <li>Dates highlighted with a darker color indicate high volume of smell reports</li>
           <li>Click on a smell report or monitoring station to view more details</li>
@@ -251,6 +252,8 @@
         <li>Sierra Club</li>
         <li>ROCIS</li>
         <li>Blue Lens, LLC</li>
+        <li>PennFuture</li>
+        <li>Clean Water Action</li>
       </ul>
       <div id="about-version-number">
         version: ###
