some text changes on the app.

--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,7 @@
       </div>
       <br/>
       <div class="submission-disclaimer">
-        All smell reports rated 2 or higher will be sent to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab.
+        All smell reports will be forwarded to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab.
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
@@ -117,7 +117,7 @@
           <li>This map shows smell reports from all across Pittsburgh</li>
           <li>We offset smell report locations to protect your privacy</li>
           <li>Scroll through the timeline to view reports from any day</li>
-          <li>Dates highlighted with a darker color indicate high volume of smell reports</li>
+          <li>Dates highlighted with a darker color indicate avg. rating of smell reports</li>
           <li>Click on a smell report or monitoring station to view more details</li>
         </ul>
         <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">OK</a>
@@ -254,6 +254,7 @@
         <li>Blue Lens, LLC</li>
         <li>PennFuture</li>
         <li>Clean Water Action</li>
+        <li>Clean Air Council</li>
       </ul>
       <div id="about-version-number">
         version: ###
