Highlights name/email in red when it is blank in settings.

--- a/www/index.html
+++ b/www/index.html
@@ -174,8 +174,8 @@
         <h3>Contact Information</h3>
         <label class="settings-description">While these fields are optional, signing your name in reports to the health department can improve authenticity and effectiveness.</label>
         <div>
-          <input type="text" name="textfield_name" id="textfield_name" placeholder="name" data-clear-btn="true" />
-          <input type="text" name="textfield_email" id="textfield_email" placeholder="email" data-clear-btn="true" />
+          <input type="text" name="textfield_name" id="textfield_name" placeholder="name (recommended)" data-clear-btn="true" />
+          <input type="text" name="textfield_email" id="textfield_email" placeholder="email (recommended)" data-clear-btn="true" />
           <input type="text" name="textfield_address" id="textfield_address" placeholder="mailing address" data-clear-btn="true" />
           <input type="number" name="textfield_phone" id="textfield_phone" placeholder="phone number" data-clear-btn="true" />
         </div>
