Disable text fields when submitting a smell value of 1.

--- a/www/index.html
+++ b/www/index.html
@@ -77,11 +77,11 @@
       </div>
       <div class="homepage-section">
         <label for="textfield_smell_description">Describe the smell or source of odor</label>
-        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="e.g. industrial, woodsmoke, rotten-eggs" data-clear-btn="true" />
+        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
         <label for="textfield_feelings_symptoms">Any symptoms linked to the odor?</label>
-        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="e.g. headache, sore throat, eye irritation" data-clear-btn="true" />
+        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
         <label for="textfield_additional_comments">Add a personal note to the Health Department</label>
