Fixed phone number textfield (for those who are likely to use dashes in their phone number)

--- a/www/index.html
+++ b/www/index.html
@@ -177,7 +177,7 @@
           <input type="text" name="textfield_name" id="textfield_name" placeholder="name (recommended)" data-clear-btn="true" />
           <input type="text" name="textfield_email" id="textfield_email" placeholder="email (recommended)" data-clear-btn="true" />
           <input type="text" name="textfield_address" id="textfield_address" placeholder="mailing address" data-clear-btn="true" />
-          <input type="number" name="textfield_phone" id="textfield_phone" placeholder="phone number" data-clear-btn="true" />
+          <input type="text" name="textfield_phone" id="textfield_phone" placeholder="phone number" data-clear-btn="true" />
         </div>
       </div>
       <div id="notificationsCollapsible" data-role="collapsible">
