--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,7 @@
       </div>
       <br/>
       <div class="submission-disclaimer">
-        All smell reports will be forwarded to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab.
+        All smell reports within Alleghency County will be forwarded to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab.
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
