Select location on map, or current location.

--- a/www/index.html
+++ b/www/index.html
@@ -297,6 +297,8 @@
     <div role="main" class="ui-content" id="map-locationselect-container" data-iscroll>
       <div id="map_locationselect"></div>
       <div id="middle-circle"></div>
+      <div id="locationselect-button-gps" class="custom-button ui-icon-custom-gps noselect"></div>
+      <div id="locationselect-button-done" class="custom-button ui-icon-custom-done noselect"></div>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="map_1" data-tap-toggle="false">
