Location select on home page uses button instead of link element (broken click on ios)

--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="homepage-section">
         <label for="button_smell_location">Report Location</label>
-        <a id="button_smell_location" href="#locationselect" data-transition="none" data-role="button" data-icon="navigation" data-iconpos="left">Current Location (default)</a>
+        <button type="button" id="button_smell_location">Current Location (default)</button>
       </div>
       <div class="homepage-section">
         <label for="textfield_smell_description">Describe the smell or source of odor</label>
