--- a/www/index.html
+++ b/www/index.html
@@ -79,10 +79,6 @@
         </fieldset>
       </div>
       <div class="homepage-section">
-        <label for="button_smell_location">Report Location</label>
-        <button type="button" id="button_smell_location">Current Location (default)</button>
-      </div>
-      <div class="homepage-section">
         <label for="textfield_smell_description">Describe the smell or source of odor</label>
         <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
       </div>
@@ -93,6 +89,24 @@
       <div class="homepage-section">
         <label for="textfield_additional_comments">Add a personal note to the Health Department</label>
         <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="true"></textarea>
+      </div>
+      <label for="checkbox_test">Report Current Time/Location<label class="settings-description-smaller">Uncheck this box to manually select a time and location for the smell report.</label></label>
+      <input type="checkbox" id="checkbox_test" checked="checked" />
+      <div class="homepage-section">
+        <!-- custom location -->
+        <label for="button_smell_location">Report Location</label>
+        <button type="button" id="button_smell_location">Current Location (default)</button>
+        <!-- custom time -->
+        <label for="select-report-time">Report Time</label>
+        <select name="select-report-time" id="select-report-time">
+          <option value=""></option>
+          <option value="epochtime1234567890">Now</option>
+          <option value="">4:00 AM</option>
+          <option value="">3:00 AM</option>
+          <option value="">2:00 AM</option>
+          <option value="">1:00 AM</option>
+          <option value="">12:00 AM</option>
+        </select>
       </div>
       <br/>
       <div class="submission-disclaimer">
