Populate time dropdown with previous hours in the day.

--- a/www/index.html
+++ b/www/index.html
@@ -90,9 +90,9 @@
         <label for="textfield_additional_comments">Add a personal note to the Health Department</label>
         <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="true"></textarea>
       </div>
-      <label for="checkbox_test">Report Current Time/Location<label class="settings-description-smaller">Uncheck this box to manually select a time and location for the smell report.</label></label>
-      <input type="checkbox" id="checkbox_test" checked="checked" />
-      <div class="homepage-section">
+      <label for="checkbox_current_time_location">Report Current Time/Location<label class="settings-description-smaller">Uncheck this box to manually select a time and location for the smell report.</label></label>
+      <input type="checkbox" id="checkbox_current_time_location" checked="checked" />
+      <div class="homepage-section" id="display_for_custom_time_location">
         <!-- custom location -->
         <label for="button_smell_location">Report Location</label>
         <button type="button" id="button_smell_location">Current Location (default)</button>
@@ -100,12 +100,7 @@
         <label for="select-report-time">Report Time</label>
         <select name="select-report-time" id="select-report-time">
           <option value=""></option>
-          <option value="epochtime1234567890">Now</option>
-          <option value="">4:00 AM</option>
-          <option value="">3:00 AM</option>
-          <option value="">2:00 AM</option>
-          <option value="">1:00 AM</option>
-          <option value="">12:00 AM</option>
+          <option value="">Now</option>
         </select>
       </div>
       <br/>
