Tweaks to disclaimer message

--- a/www/index.html
+++ b/www/index.html
@@ -110,8 +110,9 @@
       <div class="submission-disclaimer">
         NOTE: Please only enter information that you are comfortable with sharing anonymously on the public Smell PGH map.
       </div>
+      <br/>
       <div class="submission-disclaimer">
-        All smell reports within Alleghency County will be forwarded to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, please enter your contact info in the settings tab.
+        All smell reports within Alleghency County will be forwarded to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, enter your contact info in the settings tab.
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
