Add link to smellpgh.org on About page

--- a/www/index.html
+++ b/www/index.html
@@ -277,6 +277,7 @@
     <!-- main -->
     <div role="main" class="ui-content">
       <h3>About Smell PGH</h3>
+      <p><a href="http://smellpgh.org/" target="_blank">Official Website</a></p>
       <p>Pittsburgh was named one of the top 15 most livable cities in the US, but our air quality is often worse than other cities on that list. Foul odors outside are typically symptoms of a serious pollution problem in our region. We, our children, our friends and families all breathe in this air. If our air smells toxic, then we are likely inhaling toxins.</p>
       <p>Smell PGH was designed to crowdsource smell reports so we can track how pollutants travel through our air across Pittsburgh. All odor complaints submitted through the app go directly to the health department (ACHD) so they can better monitor and act on these complaints.</p>
       <center class="smell-submit-share">-- Smell -- Submit -- Share --</center>
