--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/pages/settingspage.js"></script>
     <script src="js/pages/aboutpage.js"></script>
     <script src="js/pages/locationselectpage.js"></script>
+    <script src="js/analytics.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
