--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,7 @@
       </div>
       <br/>
       <div class="submission-disclaimer">
-        All smell reports within Alleghency County will be forwarded to the Allegheny County Health Department (ACHD). If you'd like to receive correspondence from ACHD, enter your contact info in the settings tab.
+        All smell reports within Allegheny County will be forwarded to Allegheny County's health department (ACHD). If you'd like to receive correspondence from ACHD, enter your contact info in the settings tab.
       </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
